syntax = "proto3";

option csharp_namespace = "Grpc.Playground.Api";

message GreeterResponse {
	string Message = 1;
}
