syntax = "proto3";

option csharp_namespace = "Grpc.Playground.Api";

message GreeterRequest {
	string Name = 1;
}
